[package]
name = "doodlejump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_ecs_ldtk = "0.9.0"
bevy_ecs_tilemap = "0.12.0"
bevy_rapier2d = "0.24.0"
egui = "0.26.2"
leafwing-input-manager = "0.11.1"
seldom_state = {version = "0.9.0", features = ["leafwing_input"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

